{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 53,
  "lineage": "de232077-38dc-ee51-d894-21855733ecb5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cubbit_sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501853673872:security-group/sg-0e7198211bffeed11",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.24.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7198211bffeed11",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.24.0.0/16"
                ],
                "description": "TLC from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "501853673872",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b1e321d477b6b031"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cubbit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cubbit_sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501853673872:security-group/sg-0ee1ced8ca8a173b2",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.24.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee1ced8ca8a173b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.24.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "501853673872",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b1e321d477b6b031"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cubbit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cubbit_sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501853673872:subnet/subnet-0d978dfde98e52c12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.24.1.0/24",
            "id": "subnet-0d978dfde98e52c12",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501853673872",
            "tags": {
              "Name": "cubbit-dev-sn1"
            },
            "tags_all": {
              "Name": "cubbit-dev-sn1"
            },
            "vpc_id": "vpc-0b1e321d477b6b031"
          },
          "dependencies": [
            "aws_vpc.cubbit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cubbit_sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501853673872:subnet/subnet-007593e13f7f9629a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.24.2.0/24",
            "id": "subnet-007593e13f7f9629a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501853673872",
            "tags": {
              "Name": "cubbit-dev-sn2"
            },
            "tags_all": {
              "Name": "cubbit-dev-sn2"
            },
            "vpc_id": "vpc-0b1e321d477b6b031"
          },
          "dependencies": [
            "aws_vpc.cubbit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cubbit_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501853673872:vpc/vpc-0b1e321d477b6b031",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.24.0.0/16",
            "default_network_acl_id": "acl-032148d0790b11e6c",
            "default_route_table_id": "rtb-050c76ee59439d488",
            "default_security_group_id": "sg-0baa3a265143d3567",
            "dhcp_options_id": "dopt-27ad645d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b1e321d477b6b031",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-050c76ee59439d488",
            "owner_id": "501853673872",
            "tags": {
              "Name": "cubbit-dev-vpc"
            },
            "tags_all": {
              "Name": "cubbit-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}